--- a/web/pom.xml
+++ b/web/pom.xml
@@ -41,6 +41,11 @@
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
+			<artifactId>psi-probe-tomcat85</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>psi-probe-tomcat9</artifactId>
 			<version>${project.version}</version>
 		</dependency>
